Fixing tabs so that their end are always aligned to the same module of depth.

--- a/time-writer-react/components/document/_.css
+++ b/time-writer-react/components/document/_.css
@@ -61,7 +61,6 @@
 	display: flex;
 	flex-direction: row;
 	white-space: pre;
-	tab-size: 4;
 }
 
 .document .document-content .carets {
