--- a/time-writer-react/components/document/_text.css
+++ b/time-writer-react/components/document/_text.css
@@ -53,6 +53,5 @@
     right: 0;
     top: -2px;
     position: absolute;
-    margin: 0.5em 2px;
-    
+    margin: 0.5em 1.5px;    
 }
